# MNIST_demo

./: .gitignore  hello.py  main.ipynb  pyproject.toml
